--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
   <script>
     document.getElementById("contact-form").addEventListener("submit", function(e) {
       e.preventDefault();
-      alert("Message sent (demo only).);
+      alert("Message sent (demo only).");
       this.reset();
     });
   </script>
