--- a/index.html
+++ b/index.html
@@ -470,7 +470,9 @@
         <div class="container">
             <div class="about-content fade-in">
                 <div class="profile-card">
-                    <div class="profile-image">SU</div>
+                    <div class="profile-image">
+                        <img src="pic_trulli.jpg" alt="Italian Trulli">
+                    </div>
                     <div class="profile-info">
                         <h2>Samip Upreti</h2>
                         <p>Developer & Educator</p>
@@ -481,11 +483,7 @@
                             </div>
                             <div>
                                 <span>Location:</span>
-                                <span>Lalitpur, Nepal</span>
-                            </div>
-                            <div>
-                                <span>Born:</span>
-                                <span>June 15, 1995</span>
+                                <span>Kathmandu, Nepal</span>
                             </div>
                         </div>
                     </div>
@@ -596,18 +594,9 @@
                         <div class="contact-icon">📧</div>
                         <div class="contact-item-content">
                             <h4>Email</h4>
-                            <p>samip.upreti@example.com</p>
+                            <p>upretsamip@gmail.com</p>
                         </div>
-                    </div>
-                    
-                    <div class="contact-item">
-                        <div class="contact-icon">📱</div>
-                        <div class="contact-item-content">
-                            <h4>Phone</h4>
-                            <p>+977-XXX-XXXX</p>
-                        </div>
-                    </div>
-                    
+                    </div>   
                     <div class="contact-item">
                         <div class="contact-icon">📍</div>
                         <div class="contact-item-content">
@@ -620,7 +609,7 @@
                         <div class="contact-icon">💼</div>
                         <div class="contact-item-content">
                             <h4>LinkedIn</h4>
-                            <p>linkedin.com/in/samipupreti</p>
+                            <p>https://www.linkedin.com/in/samip-upreti/</p>
                         </div>
                     </div>
                 </div>
