--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
             <div class="about-content fade-in">
                 <div class="profile-card">
                     <div class="profile-image">
-                        <img src="pic_trulli.jpg" alt="Italian Trulli">
+                        <img src="IMG_0061.jpeg" alt="Samip Upreti">
                     </div>
                     <div class="profile-info">
                         <h2>Samip Upreti</h2>
