--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Samip Upreti - Developer & Educator</title>
+    <link rel="icon" type="image/png" href="favicon-32x32.png">
+
     <style>
         * {
             margin: 0;
