--- a/index.html
+++ b/index.html
@@ -538,7 +538,7 @@
             
             <div class="experience-timeline fade-in">
                 <div class="experience-item">
-                    <h3>Primary ICT Teacher</h3>
+                    <h3>ICT and Makerspace Educator</h3>
                     <div class="company">Rato Bangala School</div>
                     <div class="duration">Oct 2024 – Present</div>
                     <div class="location">📍 Lalitpur, Nepal</div>
